<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <ImageView android:id="@+id/imageView1" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/logo" android:layout_marginTop="40dp" android:layout_marginBottom="30dp"></ImageView>
    <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/loginOrEmailLabel"></TextView>
    <EditText android:layout_height="wrap_content" android:inputType="textEmailAddress" android:layout_width="match_parent" android:id="@+id/loginField">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/passwordLabel"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="textPassword" android:id="@+id/passwordField">
    </EditText>
    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/signInButton" android:text="@string/signInAction"></Button>
    <Button android:layout_height="wrap_content" android:text="@string/createAccountAction" android:layout_width="match_parent" android:id="@+id/signUpButton"></Button>
    
</LinearLayout>
